mobile tweaks II

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
             <h2 class="contact__heading">Kontakt i dojazd</h2>
           </header>
 
-          <div class="contact__info grid-2-col">
+          <div class="contact__info">
             <div class="contact__col1">
               <img
                 class="contact__image"
@@ -369,11 +369,11 @@
         </section>
       </section>
 
+
       <footer class="footer">
         <div class="footer__4-col">
           <section class="footer__section">
             <img
-            
               src="images/logo-dom-pod-wierzba-coffee.png"
               alt="pod pod wierzbą logotyp"
             />
@@ -436,7 +436,7 @@
             <p class="footer__social"><i class="fab fa-facebook-f"></i></p>
           </section>
         </div>
-        <p class="footer__text">2020 © Dom Pod Wierzbą</p>
+        <p class="footer__text">Dom Pod Wierzbą © 2020</p>
       </footer>
     </main>
 
