--- a/terapia-holistyczna.html
+++ b/terapia-holistyczna.html
@@ -148,7 +148,7 @@
             </p>
 
             <h2 class="subpage-article__heading2">
-              <i class="fas fa-caret-right">&nbsp;&nbsp;</i>Pomagam...
+              POMAGAM...
             </h2>
 
             <ul>
@@ -165,8 +165,7 @@
             </ul>
 
             <h2 class="subpage-article__heading2">
-              <i class="fas fa-caret-right">&nbsp;&nbsp;</i>Narzędzia i sposoby
-              pracy
+              NARZĘDZIA I SPOSOBY PRACY
             </h2>
             <p>
               Posiadam wieloletnie doświadczenie jako terapeutka i osoba
@@ -189,7 +188,7 @@
             </p>
 
             <h2 class="subpage-article__heading2">
-              <i class="fas fa-caret-right">&nbsp;&nbsp;</i>Wykształcenie
+              WYKSZTAŁCENIE
             </h2>
             <p>
               Ukończyłam Szkołę Coachów Stowarzyszenia CEL, Szkołę Terapii
@@ -207,12 +206,12 @@
 
             <div class="emptyspace20 off-on-mob"></div>
             <h2 class="subpage-article__heading2">
-              <i class="fas fa-caret-right">&nbsp;&nbsp;</i>Gdzie się spotkamy?
+              GDZIE SIĘ SPOTKAMY? :)
             </h2>
             <p>
               Sesje odbywają się w Domu Pod Wierzbą (ul. Główna 34, 55-220
               Brzezinki), we Wrocławiu przy ul. Hallera 3/4 lub
-              <em>online</em> przez Zoom, Skype lub inne komunikatory
+              <em>online</em> przez Zoom, Skype lub inne komunikatory online.
             </p>
 
             <div class="subpage-article__contact-card">
